@@ -1,6 +1,5 @@
 package org.ad;
 
-import com.linkedin.FeatureName;
 import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
 import java.util.ArrayList;
@@ -28,8 +27,8 @@ import org.openjdk.jmh.infra.Blackhole;
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.SECONDS)
 @Warmup(iterations = 5, time = 10)
-@Measurement(iterations = 25, time = 10)
-@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "-XX:+UseParallelGC", "-XX:+DisableExplicitGC", "-XX:+UnlockDiagnosticVMOptions", "-XX:+AlwaysPreTouch", "-Xms20g", "-Xmx20g"})
+@Measurement(iterations = 5, time = 10)
+@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "-XX:+UseParallelGC", "-XX:+DisableExplicitGC", "-XX:+UnlockDiagnosticVMOptions", "-XX:+AlwaysPreTouch", "-Xms20g", "-Xmx20g", "--enable-preview"})
 @Threads(1)
 public class FinalsBenchmark {
   private final static SecureRandom random = new SecureRandom();
@@ -39,7 +38,7 @@ public class FinalsBenchmark {
   public void setup() {
     l = new ArrayList<>(800);
     for (int i = 0; i < 800; i++) {
-      Pojo p = new Pojo(getAlphaNumericString(100), ThreadLocalRandom.current().nextDouble(), randomEnum(FeatureName.class));
+      Pojo p = new Pojo(getAlphaNumericString(100), ThreadLocalRandom.current().nextDouble(), getAlphaNumericString(100));
       l.add(p);
     }
   }
@@ -65,7 +64,7 @@ public class FinalsBenchmark {
     final Map<String, Pojo2> m = new HashMap<>(800);
     for (int i = 0; i < l.size(); i++) {
       final Pojo p = l.get(i);
-      final String fn = p._featureName.toString();
+      final String fn = p._featureName;
       final Pojo2 p2 = new Pojo2(p._string, p._double, fn);
       m.put(fn, p2);
     }
@@ -75,8 +74,8 @@ public class FinalsBenchmark {
   private class Pojo {
     String _string;
     double _double;
-    FeatureName _featureName;
-    Pojo(String s, double d, FeatureName i) {
+    String _featureName;
+    Pojo(String s, double d, String i) {
       _string = s;
       _double = d;
       _featureName = i;
